# config-inspector

./: .gitignore  LOGGING_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  Report20251025_145816.json  Report20251025_145833.json  Report20251025_151259.json  Report20251025_153436.json  pyproject.toml  validation-config-dev.yaml  validation-config-prod.yaml  validation-config.yaml
config/: .gitignore
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  IMPLEMENTATION.md  QUICK_START.md  README.md
examples/: storage_usage.py
src/config_validator/: __init__.py  __main__.py  cli.py
src/config_validator/core/: async_validator.py  base_validator.py  config.py  discovery.py  plugins_loader.py  report.py  rules_loader.py  sync_validator.py  validation_service.py  validator.py  watcher.py
src/config_validator/plugins/: __init__.py  base_plugin.py  check_env.py  check_replica.py  sample_plugin.py
src/config_validator/rules/: __init__.py  base_rule.py  check_core.py  check_database.py  check_env.py  check_replica.py
src/config_validator/storage/: __init__.py  base_strategy.py  hdfs_strategy.py  local_strategy.py  s3_strategy.py  strategy_loader.py
src/config_validator/utils/: __init__.py  logging_setup.py
tests/: test_discovery.py  test_plugins.py  test_storage.py  test_validation.py
